# gesture-universe

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: gesture_from_image.rs  handpose_bench.rs  handpose_from_image.rs  model_info.rs  palm_from_image.rs
models/: gesture_mlp.onnx  ops.config
scripts/: build_onnxruntime.ps1
src/: camera.rs  gesture.rs  main.rs  model_download.rs  recognizer.rs  types.rs  ui.rs
src/pipeline/: camera.rs  mod.rs  rgba_converter.rs  skeleton.rs
src/pipeline/recognizer/: common.rs  ort.rs
src/pipeline/recognizer/palm/: mod.rs
src/recognizer/: common.rs  mod.rs  ort.rs
src/ui/: camera_view.rs  download.rs  main_view.rs  mod.rs  render_util.rs  titlebar.rs
