[package]
name = "gesture-universe"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Gesture Universe"
identifier = "com.gesture-universe.app"
version = "0.1.0"
copyright = "Copyright © 2024 Gesture Universe"
category = "public.app-category.utilities"
short_description = "Hand gesture recognition application"
long_description = """
A hand gesture recognition application built with Rust and GPUI.
"""

[target.'cfg(windows)'.build-dependencies]

[[bin]]
name = "gesture-universe"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = ["camera-nokhwa"]
camera-nokhwa = ["nokhwa"]

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "1"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4"
env_logger = "0.11"
nokhwa = { version = "0.10", default-features = false, features = [
    "input-native",
    "output-threaded",
    "decoding",
], optional = true }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
indicatif = "0.17"
ndarray = { version = "0.16", default-features = false, features = ["std"] }
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
    "ndarray",
    "std",
] }
